--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-pandas>=2.0.0
-numpy>=1.24.3
-scikit-learn>=1.0.2
-joblib>=1.1.0
-yfinance>=0.2.18
-fredapi>=0.5.0 
+pandas>=1.3.0
+matplotlib>=3.3.0
+seaborn>=0.11.0
+numpy>=1.19.0
+markdown>=3.3.0
+pdfkit>=1.0.0
+yfinance>=0.1.63
+fredapi>=0.5.0
+scikit-learn>=0.24.0
+tabulate>=0.8.0 
